--- a/SPA Pluralsight/package.json
+++ b/SPA Pluralsight/package.json
@@ -3,9 +3,11 @@
     "private": true,
     "version": "1.0.0",
     "dependencies": {
+        "axios": "^0.18.0",
         "bulma": "^0.7.1",
         "vue": "^2.5.17",
-        "vue-router": "^3.0.1"
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
         "aspnet-webpack": "^3.0.0",
